k8s/crawl4ai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawl4ai
  namespace: mykb
spec:
  selector:
    app: crawl4ai
  ports:
    - port: 11235
      targetPort: 11235
  type: ClusterIP
