k8s/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: mykb
spec:
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700
  type: ClusterIP
