k8s/mykb-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mykb-api-grpc
  namespace: mykb
spec:
  selector:
    app: mykb-api
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mykb-api-http
  namespace: mykb
spec:
  selector:
    app: mykb-api
  ports:
    - port: 9091
      targetPort: 9091
  type: ClusterIP
