k8s/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykb-ingress-grpc
  namespace: mykb
spec:
  rules:
    - host: mykb.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mykb-api-grpc
                port:
                  number: 9090
