k8s/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykb-ingress-http
  namespace: mykb
spec:
  rules:
    - host: mykb.k3s
      http:
        paths:
          - path: /api/ingest
            pathType: Prefix
            backend:
              service:
                name: mykb-api-http
                port:
                  number: 9091
