k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykb-ingress
  namespace: mykb
spec:
  rules:
    - host: mykb.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykb-api-ingress
  namespace: mykb
spec:
  rules:
    - host: api.mykb.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mykb-api
                port:
                  number: 9091
